Fix some typos with codespell

--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -189,7 +189,7 @@ requires = ["setuptools>=70.0", "wheel; python_version>='3.12'"]
 build-backend = "setuptools.build_meta"
 
 # This is a fix for an issue in setuptools. See: https://github.com/pypa/setuptools/issues/4759
-# This shoulde be removed when the issue is resolved.
+# This should be removed when the issue is resolved.
 [tool.setuptools]
 license-files = []
 
