--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,8 +203,8 @@ jobs:
         timeout-minutes: 30
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
-          COVERAGE_FILE: "~/.local/share/coverage/${{ matrix.group }}.coverage"
-        run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration --cov=webknossos --cov-report=term-missing
+          COVERAGE_FILE: "~/.local/share/coverage/${{ matrix.group }}.xml"
+        run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration --cov=webknossos --cov-report=xml
 
       - name: Python tests
         if: ${{ matrix.python-version != '3.11' }}
@@ -218,7 +218,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report-${{ matrix.group }}
-          path: "~/.local/share/coverage/${{ matrix.group }}.coverage"
+          path: "~/.local/share/coverage/${{ matrix.group }}.xml"
           retention-days: 1  # Automatically deletes after 1 day
 
       - name: Check if git is dirty
@@ -235,8 +235,6 @@ jobs:
         working-directory: webknossos
 
     steps:
-      - uses: actions/checkout@v3
-
       - name: Install coverage.py
         run: pip install coverage
 
@@ -245,13 +243,17 @@ jobs:
         with:
           path: ~/coverage-files
 
-
       - name: Generate coverage report
         env:
-          COVERAGE_FILE: "~/coverage-files/result.coverage"
+          COVERAGE_FILE: "~/coverage-files/result.xml"
         run: |
-          coverage combine ~/coverage-files/**/*.coverage
-          coverage report -m
+          coverage combine ~/coverage-files/**/*.xml
+
+      - name: Report coverage
+        uses: orgoro/coverage@v3.2
+        with:
+          coverageFile: ~/coverage-files/result.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Cleanup temporary files
         run: rm -rf ~/coverage-files
