--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -204,7 +204,7 @@ jobs:
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
           COVERAGE_FILE: "~/.local/share/coverage/${{ matrix.group }}.xml"
-        run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration --cov=webknossos --cov-report=xml
+        run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration --cov=webknossos --cov-report=
 
       - name: Python tests
         if: ${{ matrix.python-version != '3.11' }}
@@ -218,7 +218,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report-${{ matrix.group }}
-          path: "~/.local/share/coverage/${{ matrix.group }}.xml"
+          path: "~/.local/share/coverage/${{ matrix.group }}.coverage"
           retention-days: 1  # Automatically deletes after 1 day
 
       - name: Check if git is dirty
@@ -242,9 +242,10 @@ jobs:
 
       - name: Generate coverage report
         env:
-          COVERAGE_FILE: "~/coverage-files/result.xml"
+          COVERAGE_FILE: "~/coverage-files/result.coverage"
         run: |
-          coverage combine ~/coverage-files/**/*.xml
+          coverage combine ~/coverage-files/**/*.coverage
+          coverage xml -i -o ~/coverage-files/result.xml
 
       - name: Report coverage
         uses: orgoro/coverage@v3.2
