--- a/webknossos/tests/cassettes/test_api_client/test_annotation_info.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_annotation_info.yml
@@ -2,7 +2,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /api/v9/annotations/570ba0092a7c0e980056fe9b/info?timestamp=1738247720000
+        /api/v9/annotations/570ba0092a7c0e980056fe9b/info?timestamp=1744722468000
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -19,10 +19,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 30 Jan 2025 14:35:19 GMT
+        date: Tue, 15 Apr 2025 13:07:47 GMT
+        connection: close
         content-type: application/json
         content-length: '1911'
       body:
