--- a/webknossos/tests/cassettes/test_api_client/test_health.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_health.yml
@@ -18,10 +18,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 30 Jan 2025 14:35:19 GMT
+        date: Tue, 15 Apr 2025 13:07:47 GMT
+        connection: close
         content-type: text/plain; charset=UTF-8
         content-length: '2'
       body:
