--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,7 +203,7 @@ jobs:
         timeout-minutes: 30
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
-          COVERAGE_FILE: "~/.local/share/coverage/${{ matrix.group }}.xml"
+          COVERAGE_FILE: "~/.local/share/coverage/${{ matrix.group }}.coverage"
         run: ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration --cov=webknossos --cov-report=
 
       - name: Python tests
@@ -247,7 +247,7 @@ jobs:
         env:
           COVERAGE_FILE: "coverage-files/result.coverage"
         run: |
-          coverage combine coverage-files/*.coverage
+          coverage combine coverage-files/**/*.coverage
           coverage xml -i -o coverage-files/result.xml
 
       - name: Report coverage
