--- a/cluster_tools/dockered-slurm/slurm.conf
+++ b/cluster_tools/dockered-slurm/slurm.conf
@@ -3,8 +3,7 @@
 # See the slurm.conf man page for more information.
 #
 ClusterName=linux
-ControlMachine=slurmctld
-ControlAddr=slurmctld
+SlurmctldHost=slurmctld
 #BackupController=
 #BackupAddr=
 #
@@ -22,22 +21,7 @@ MpiDefault=none
 SlurmctldPidFile=/var/run/slurmd/slurmctld.pid
 SlurmdPidFile=/var/run/slurmd/slurmd.pid
 ProctrackType=proctrack/linuxproc
-#PluginDir=
-#FirstJobId=
-ReturnToService=0
-#MaxJobCount=
-#PlugStackConfig=
-#PropagatePrioProcess=
-#PropagateResourceLimits=
-#PropagateResourceLimitsExcept=
-#Prolog=
-#Epilog=
-#SrunProlog=
-#SrunEpilog=
-#TaskProlog=
-#TaskEpilog=
-# The task/affinity plugin needs to be enabled for the SLURM_CPU_BIND environment variable to have an effect.
-# We test for a regression that's related to CPU binding in the `test_cpu_bind_regression` test in `test_slurm.py`.
+
 TaskPlugin=task/affinity
 #TrackWCKey=no
 #TreeWidth=50
@@ -69,9 +53,9 @@ SelectTypeParameters=CR_CPU_Memory
 #PriorityMaxAge=1-0
 #
 # LOGGING
-SlurmctldDebug=3
+SlurmctldDebug=debug
 SlurmctldLogFile=/var/log/slurm/slurmctld.log
-SlurmdDebug=3
+SlurmdDebug=debug
 SlurmdLogFile=/var/log/slurm/slurmd.log
 JobCompType=jobcomp/filetxt
 JobCompLoc=/var/log/slurm/jobcomp.log
