--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -279,6 +279,18 @@ nav:
         - Task: api/webknossos/administration/task.md
     - CLI Reference:
       - Overview: cli/index.md
+      - Install and Run: cli/install.md
+      - CLI Commands:
+        - Convert Images: cli/convert.md
+        - Compress: cli/compress.md
+        - Copy Datasets: cli/copy.md
+        - Download: cli/download.md
+        - Upload: cli/upload.md
+        - Downsample: cli/downsample.md
+        - Upsample: cli/upsample.md
+        - Export as Tiff: cli/export-as-tiff.md
+        - Merge Fallback: cli/merge-fallback.md
+      - Contribute: cli/contribute.md
     - Version Changelog:
       - webknossos-py/stability_policy.md
       - webknossos-py/changelog.md
