Add RunLLM AI assistant to documentation (#1301)
* add run-llm widget to docs

* Update docs/mkdocs.yml

---------

Co-authored-by: Norman Rzepka <code@normanrz.com>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -57,6 +57,9 @@ extra:
       link: https://medium.com/webknossos
   generator: false
 
+extra_javascript:
+  - javascripts/runllm-widget.js
+
 plugins:
   # - gen-files:
   #     scripts:
